Fix some layout issues

--- a/frontend/src/styles/base/_layout.scss
+++ b/frontend/src/styles/base/_layout.scss
@@ -29,7 +29,7 @@ a {
   // margin-top: 0.5rem;
   padding: 0.4rem 0.7rem;
   border: 1px solid $gray;
-  border-radius: 3px;
+  border-radius: 0.3rem;
   text-align: center;
 
   @media (hover: hover) {
