--- a/frontend/src/styles/components/images/_images_gallery.scss
+++ b/frontend/src/styles/components/images/_images_gallery.scss
@@ -5,7 +5,7 @@
 
   .gallery-displayed-image-container {
     position: relative;
-    height: 100%;
+    height: 73%;
 
     .gallery-displayed-image {
       object-fit: contain;
@@ -67,7 +67,7 @@
 
   .gallery-navigation-buttons {
     margin: 0.5rem 0;
-    height: 4rem;
+    height: 5%;
     display: flex;
     justify-content: space-between;
 
@@ -77,7 +77,7 @@
   }
 
   .gallery-thumbnail-index {
-    height: 30%;
+    height: 20%;
     // overflow-x: scroll;
     // overflow-y: hidden;
     // white-space: nowrap;
